put html into html folder

--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Home</title>
-        <link rel="stylesheet" href="css/stylesheet.css"/>
+        <link rel="stylesheet" href="../css/stylesheet.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -23,7 +23,7 @@
             <h2 class="home-header">About</h2>
             <section>
                 <div class="section" style="display: table">
-                    <img src="media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
+                    <img src="../media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
                     <div style="margin-right: auto;" >
                         <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
                         <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
