--- a/html/resume.html
+++ b/html/resume.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Resume</title>
-        <link rel="stylesheet" href="css/stylesheet.css"/>
+       <link rel="stylesheet" href="../css/stylesheet.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
