put index.html outside of html file

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
              <ul class="nav">
                 <h2 class="header"><a href="index.html">JT</a></h2>
-                <li class="nav nav-element"><a href="contact.html">Contact</a></li>
-                <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
-                <li class="nav nav-element"><a href="resume.html">Resume</a></li>
+                <li class="nav nav-element"><a href="./html/contact.html">Contact</a></li>
+                <li class="nav nav-element"><a href="./html/portfolio.html">Portfolio</a></li>
+                <li class="nav nav-element"><a href="./html/resume.html">Resume</a></li>
                 <li class="nav active"><a href="index.html">Home</a></li>
             </ul>
         </nav>
@@ -23,7 +23,7 @@
             <h2 class="home-header">About</h2>
             <section>
                 <div class="section" style="display: table">
-                    <img src="../media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
+                    <img src="./media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
                     <div style="margin-right: auto;" >
                         <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
                         <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
