link to key dates instagram posts

--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -54,6 +54,7 @@
                     <h3 class="portfolio-media-header">Key Dates for the 2020 General Election in Georgia:</h3>
                     <img src="../media/FFKeyDates.jpg" class='portfolio-media'/>
                     <p> For this post, I wanted to limit all the information about key dates to one picture, so that an Instagram user could easily repost it to their instagram story and educate their followers on key dates for the election. In terms of content, I organized the dates in bullets, and made the final bullet a different color than the rest to emphasize its importance. I wanted to include information about absentee ballots because it is important but isnt a date, so I included it in smaller text at the bottom. Finally, I added the yellow accent shape on the right to make it more visual appealing and more likely to get an Instagram user's attention.</p>
+                     <p class="accent-second-header"><a href="https://www.instagram.com/p/CFNyaiehahw/">Click Here to View Instagram Post</a></p>
                     <h3 class="portfolio-media-header">Requesting an Absentee Ballot: </h3>
                     <img src="../media/FFpage1.jpg" class='portfolio-media' style="width: 40%"/>
                     <img src="../media/FFpage2.jpg" class='portfolio-media' lass='portfolio-media' style="width: 40%"/>
