--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -14,7 +14,10 @@
              <ul class="nav">
                 <h2 class="header"><a href="../index.html">JT</a></h2>
                 <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+                <div class="dropdown">
+                </div>
                 <li class="nav active"><a href="portfolio.html">Portfolio</a></li>
+                 
                 <li class="nav nav-element"><a href="resume.html">Resume</a></li>
                 <li class="nav nav-element"><a href="../index.html">Home</a></li>
             </ul>
@@ -26,6 +29,14 @@
                     <h2 class="section-header">jessicataetle.github.io</h2>
                     <p style="margin-bottom: 5px">This website is a project for my Introduction to Computational Media class that I will continue to add to throughout the semester. Right now, it is purely HTML and CSS, but I hope to add in some React.js and Redux.js components as I continue to to develop it!</p>
                     <p class="accent-second-header"><a href="https://github.com/jessicataetle/jessicataetle.github.io">Click here to view Github Repository</a></p>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header"> 3-D Piet Mondrian Art Gallery</h2>
+                    <p style="margin-bottom: 5px">For my Introduction to Computational Media class, I created a 3-Dimensional version of <a href="https://society6.com/product/piet-mondrian1622787_poster">this Piet Mondrian painting</a> using A-Frame. I chose to replicate a Piet Mondrian for this assignment because I grew up going to art museums with my mom, who is a fan of Piet Mondrian. I wanted to recreate the experience of going to an outdoor sculpture garden by enhancing the sculptural elements of this painting as well as adding rain and the gloomy backdrop to make the sculpture pop out of the screen.</p>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="aframe.html" class="accent-header">Click here to view the A-Frame Scene</a>
+                    <p class="accent-second-header"><a href="https://github.com/jessicataetle/lmc-2700-aframe-project">Click here to view Github Repository</a></p>
                 </div>
             </section>
             <section>
