take away html folder and add A-Frame skill

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
              <ul class="nav">
                 <h2 class="header"><a href="index.html">JT</a></h2>
-                <li class="nav nav-element"><a href="./html/contact.html">Contact</a></li>
-                <li class="nav nav-element"><a href="./html/portfolio.html">Portfolio</a></li>
-                <li class="nav nav-element"><a href="./html/resume.html">Resume</a></li>
+                <li class="nav nav-element"><a href="contact.html">Contact</a></li>
+                <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav nav-element"><a href="resume.html">Resume</a></li>
                 <li class="nav active"><a href="index.html">Home</a></li>
             </ul>
         </nav>
