--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
         </header>
         <nav>
              <ul class="nav">
-                <h2 class="header"><a href="../index.html">JT</a></h2>
+                <h2 class="header"><a href="index.html">JT</a></h2>
                 <li class="nav active"><a href="contact.html">Contact</a></li>
                 <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-                <li class="nav nav-element"><a href="../index.html">Home</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
             </ul>
         </nav>
         <article>
