--- a/portfolio.html
+++ b/portfolio.html
@@ -12,14 +12,14 @@
         </header>
         <nav>
              <ul class="nav">
-                <h2 class="header"><a href="../index.html">JT</a></h2>
+                <h2 class="header"><a href="index.html">JT</a></h2>
                 <li class="nav nav-element"><a href="contact.html">Contact</a></li>
                 <div class="dropdown">
                 </div>
                 <li class="nav active"><a href="portfolio.html">Portfolio</a></li>
                  
                 <li class="nav nav-element"><a href="resume.html">Resume</a></li>
-                <li class="nav nav-element"><a href="../index.html">Home</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
             </ul>
         </nav>
         <article>
