--- a/resume.html
+++ b/resume.html
@@ -12,11 +12,11 @@
         </header>
         <nav>
              <ul class="nav">
-                <h2 class="header"><a href="../index.html">JT</a></h2>
+                <h2 class="header"><a href="index.html">JT</a></h2>
                 <li class="nav nav-element"><a href="contact.html">Contact</a></li>
                 <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
                 <li class="nav active"><a href="resume.html">Resume</a></li>
-                <li class="nav nav-element"><a href="../index.html">Home</a></li>
+                <li class="nav nav-element"><a href="index.html">Home</a></li>
             </ul>
         </nav>
         <article>
@@ -76,6 +76,7 @@
                         <li>Ruby on Rails</li>
                         <li>Go</li>
                         <li>Android Studio</li>
+                        <li>A-Frame</li>
                     </ul>
                 </div>
             </section>
