fix typo and delete looking for internship

--- a/resume.html
+++ b/resume.html
@@ -68,7 +68,7 @@
                         <li>Java</li>
                         <li>C</li>
                         <li>Adobe Photoshop</li>
-                        <li>Git and GitHud</li>
+                        <li>Git and GitHub</li>
                     </ul>
                     <p class="accent-second-header">[COMPETENT] </p>
                     <ul>
