minor changes to home page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                     <img src="./media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
                     <div style="margin-right: auto;" >
                         <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
-                        <p>I am a fourth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
+                        <p>I am a fifth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
                         <h3 class="home-second-header">I am a Computational Media Major.</h3>
-                        <p>This major allows me to not only take computer science classes, but also allows me to further my education into disciplines that compliment my computer science knowledge. My concentrations areas are: People and Interaction Design, which allows me to focus on User Interace Implementation and Design, a field I am interested in pursuing after college.</p>
+                        <p>This major allows me to not only take computer science classes, but also allows me to further my education into disciplines that compliment my computer science knowledge. My concentrations areas are: People and Interaction Design, which allows me to focus on user interface implementation and design. </p>
                     </div>
                 </div>
             </section>
