edit nav bar and resumre

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </ul>
         </nav>
         <article>
-            <h2 class="home-header">About</h2>
+            <h2 class="page-header">About</h2>
             <section>
                 <div class="section" style="display: table">
-                    <img src="./media/78122771_2403486773092967_5219476581470175232_n.jpg" class="center-image"/>
+                    <img src="./media/192779170_3802560333185597_2105064126897618037_n.jpg" class="center-image"/>
                     <div style="margin-right: auto;" >
                         <h3 class="home-second-header">Hello! My name is Jessica Taetle.</h3>
                         <p>I am a fifth year at the Georgia Institute of Technology, and my anticipated graduation date is May, 2022.</p>
