--- a/resume.html
+++ b/resume.html
@@ -20,21 +20,22 @@
             </ul>
         </nav>
         <article>
+            <h2 class="page-header">Resume</h2>
             <section>
                 <div class="section">
                     <h2 class="section-header">Objective: </h2>
-                    <p>To further my software development skills or design skills and gain practical real-world experience by securing a challenging internship in Summer 2021.</p>
+                    <p>To launch myself into a career as a software engineer at a growing company. I would like to focus in front-end or full stack work, and using my design experience to influence my work.</p>
                 </div>
             </section>
             <section>
                 <div class="section">
                     <h2 class="section-header">Education: </h2>
                     <p class="accent-header">[UNDERGRADUATE DEGREE]</p>
-                    <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.52]</p>
+                    <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.64]</p>
                     <p>[ 2017 - 2022 ] | [ Atlanta, Georgia ]</p>
                     <p>Computational Media Major.</p>
                     <p>Concentrations: People and Interaction Design</p>
-                    <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design</p>
+                    <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design, Intro to User Interface Design.</p>
                     <p>&nbsp;</p>
                     <p class="accent-header">[HIGH SCHOOL]</p>
                     <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
@@ -45,6 +46,11 @@
             <section>
                 <div class="section">
                     <h2 class="section-header">Experience: </h2>
+                    <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
+                    <p class="accent-second-header">[INTUIT]</p>
+                    <p>[ MAY 2021 - AUG 2021 ] | [ San Diego, California (Remote) ]</p>
+                    <p>At Intuit, I	worked collaboratively with one other intern on a project to create a new feature that allows my team to pause deployments to production during peak traffic for Intuit’s products. I also created a design in Figma collaboratively, receiving feedback from our target customers as well as a designer and iterated. I also lead the backend implementation of this and I successfully created a new database table following the REST API implementation and commands to interact with it using Spring Boot, Swagger, SQL, and Maven dependencies in Java, assisted the other intern with the front-end of this application, which was a React Component inserted into Angular.. </p>
+                    <p>&nbsp;</p>
                     <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
                     <p class="accent-second-header">[RED CANARY]</p>
                     <p>[ MAY 2020 - AUGUST 2020 ] | [ Denver, Colorado ]</p>
@@ -59,7 +65,7 @@
             <section>
                 <div class="section">
                     <h2 class="section-header">Skills:</h2>
-                    <p class="accent-second-header">[PROFICIENT]</p>
+                    <p class="accent-second-header">[CODING (PROFICIENT)]</p>
                     <ul>
                         <li>React.js</li>
                         <li>Redux.js</li>
@@ -67,16 +73,21 @@
                         <li>CSS</li>
                         <li>Java</li>
                         <li>C</li>
-                        <li>Adobe Photoshop</li>
-                        <li>Git and GitHub</li>
+                        <li>Git</li>
+                        <li>GitHub</li>
                     </ul>
-                    <p class="accent-second-header">[COMPETENT] </p>
+                    <p class="accent-second-header">[CODING (COMPETENT)] </p>
                     <ul>
                         <li>Python</li>
                         <li>Ruby on Rails</li>
                         <li>Go</li>
                         <li>Android Studio</li>
                         <li>A-Frame</li>
+                    </ul>
+                    <p class="accent-second-header">[DESIGN] </p>
+                    <ul>
+                        <li>Adobe Suite</li>
+                        <li>Figma</li>
                     </ul>
                 </div>
             </section>
