--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,8 @@
         <nav>
              <ul class="nav">
                 <h2 class="header"><a href="index.html">JT</a></h2>
-                <li class="nav nav-element"><a href="contact.html">Contact</a></li>
-                <li class="nav nav-element"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav nav-element"><a href="portfolio.html">Design Portfolio</a></li>
+                <li class="nav nav-element"><a href="projects.html">Coding Projects</a></li>
                 <li class="nav active"><a href="resume.html">Resume</a></li>
                 <li class="nav nav-element"><a href="index.html">Home</a></li>
             </ul>
