--- a/resume.html
+++ b/resume.html
@@ -33,9 +33,9 @@
                     <p class="accent-header">[UNDERGRADUATE DEGREE]</p>
                     <p class="accent-second-header">[GEORGIA INSTITUTE OF TECHNOLOGY. GPA: 3.64]</p>
                     <p>[ 2017 - 2022 ] | [ Atlanta, Georgia ]</p>
-                    <p>Computational Media Major.</p>
+                    <p>Computational Media Major</p>
                     <p>Concentrations: People and Interaction Design</p>
-                    <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design, Intro to User Interface Design.</p>
+                    <p>Relevant Coursework: Data Structures and Algorithms, Introduction to Object-Oriented Programming, Media Device Architecture, Introduction to Computational Media, Junior Design, Intro to User Interface Design, User Interface Software</p>
                     <p>&nbsp;</p>
                     <p class="accent-header">[HIGH SCHOOL]</p>
                     <p class="accent-second-header">[THE GALLOWAY SCHOOL. GPA: 4.1]</p>
@@ -49,7 +49,7 @@
                     <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
                     <p class="accent-second-header">[INTUIT]</p>
                     <p>[ MAY 2021 - AUG 2021 ] | [ San Diego, California (Remote) ]</p>
-                    <p>At Intuit, I	worked collaboratively with one other intern on a project to create a new feature that allows my team to pause deployments to production during peak traffic for Intuit’s products. I also created a design in Figma collaboratively, receiving feedback from our target customers as well as a designer and iterated. I also lead the backend implementation of this and I successfully created a new database table following the REST API implementation and commands to interact with it using Spring Boot, Swagger, SQL, and Maven dependencies in Java, assisted the other intern with the front-end of this application, which was a React Component inserted into Angular.. </p>
+                    <p>At Intuit, I	worked collaboratively with one other intern on a project to create a new feature that allows my team to pause deployments to production during peak traffic for Intuit’s products. I also created a design in Figma collaboratively, receiving feedback from our target customers as well as a designer and iterated. I also lead the backend implementation of this and I successfully created a new database table following the REST API implementation and commands to interact with it using Spring Boot, Swagger, SQL, and Maven dependencies in Java, assisted the other intern with the front-end of this application, which was a React Component inserted into Angular. </p>
                     <p>&nbsp;</p>
                     <p class="accent-header">[SOFTWARE ENGINEERING INTERN]</p>
                     <p class="accent-second-header">[RED CANARY]</p>
@@ -96,7 +96,7 @@
                     <h2 class="section-header">Activities:</h2>
                     <p class="accent-header">[BACKPACKING INSTRUCTOR]</p>
                     <p class="accent-second-header">[OUTDOOR RECREATION AT GEORGIA TECH]</p>
-                    <p>In the process of learning how to lead participants on backpacking trips in the Southeastern United States. The training includes teaching outdoor skills to the Georgia Tech community, and also working to mitigate outdoor risks by actively educating fellow staff and participants.</p>
+                    <p>Leads participants on backpacking trips in the Southeastern United States. The training includes teaching outdoor skills to the Georgia Tech community, and also working to mitigate outdoor risks by actively educating fellow staff and participants.</p>
                     <p>&nbsp;</p>
                     <p class="accent-header">[AMBASSADOR]</p>
                     <p class="accent-second-header">[COMPUTATIONAL MEDIA ("CM") AMBASSADOR]</p>
