--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Portfolio</title>
+        <title>Design Portfolio</title>
         <link rel="stylesheet" href="../css/stylesheet.css"/>
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Peta&family=Open+Sans&display=swap" rel="stylesheet">
     </head>
