--- a/projects.html
+++ b/projects.html
@@ -30,6 +30,18 @@
             </section>
             <section>
                 <div class="section">
+                    <h2 class="section-header">Ask Docta! Telemedicine App</h2>
+                    <p style="margin-bottom: 5px">Over two semesters, I worked on a team of 5 other students to plan
+                         and implement a product for an assigned client. "Ask Docta: Telemedicine App" is the Android application
+                         my team created for our client, which provides health care consultation access to Southern Cameroonian 
+                         refugees living in Nigerian refugee camps. </p>
+                    <p>For this project, I was my group's project manager by managing and dividing up tasks in Zenhub. I also took the
+                        lead on the front-end implementation of the Android application in React Native. </p>
+                    <p>Here is a video of my group's elevator pitch and demo for this class:</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TxZDwX1olbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+            </section>
+            <section>
+                <div class="section">
                     <h2 class="section-header"> 3-D Piet Mondrian Art Gallery</h2>
                     <p style="margin-bottom: 5px">For my Introduction to Computational Media class, I created a 3-Dimensional version of <a href="https://society6.com/product/piet-mondrian1622787_poster">this Piet Mondrian painting</a> using A-Frame. I chose to replicate a Piet Mondrian for this assignment because I grew up going to art museums with my mom, who is a fan of Piet Mondrian. I wanted to recreate the experience of going to an outdoor sculpture garden by enhancing the sculptural elements of this painting as well as adding rain and the gloomy backdrop to make the sculpture pop out of the screen.</p>
                     <p style="margin-bottom: 10px; margin-top: 10px"><a href="aframe.html" class="accent-header">Click here to view the A-Frame Scene</a>
