--- a/projects.html
+++ b/projects.html
@@ -31,11 +31,11 @@
             <section>
                 <div class="section">
                     <h2 class="section-header">Ask Docta! Telemedicine App</h2>
-                    <p style="margin-bottom: 5px">Over two semesters, I worked on a team of 5 other students to plan
+                    <p>Over two semesters, I worked on a team of 5 other students to plan
                          and implement a product for an assigned client. "Ask Docta: Telemedicine App" is the Android application
                          my team created for our client, which provides health care consultation access to Southern Cameroonian 
                          refugees living in Nigerian refugee camps. </p>
-                    <p>For this project, I was my group's project manager by managing and dividing up tasks in ZenHub. I also took the
+                    <p style="margin-bottom: 5px">For this project, I was my group's project manager by managing and dividing up tasks in ZenHub. I also took the
                         lead on the front-end implementation of the Android application in React Native. </p>
                     <p>Here is a video of my group's elevator pitch and demo for this class:</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/TxZDwX1olbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
