dropbox javascript game

--- a/projects.html
+++ b/projects.html
@@ -38,19 +38,29 @@
                     <p>For this project, I was my group's project manager by managing and dividing up tasks in ZenHub. I also took the
                         lead on the front-end implementation of the Android application in React Native. </p>
                     <p style="margin-bottom: 5px">Here is a video of my group's elevator pitch and demo for this class:</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TxZDwX1olbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TxZDwX1olbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </section>
             <section>
                 <div class="section">
                     <h2 class="section-header">"DropBox" Javascript Game</h2>
-                    <p>Over two semesters, I worked on a team of 5 other students to plan
-                         and implement a product for an assigned client. "Ask Docta: Telemedicine App" is the Android application
-                         my team created for our client, which provides health care consultation access to Southern Cameroonian 
-                         refugees living in Nigerian refugee camps. </p>
-                    <p>For this project, I was my group's project manager by managing and dividing up tasks in ZenHub. I also took the
-                        lead on the front-end implementation of the Android application in React Native. </p>
-                    <p>Here is a video of my group's elevator pitch and demo for this class:</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/TxZDwX1olbU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                </div>
+                    <p>With a team of 3 other Computational Media majors, we created a JavaScript game with all 
+                        original artwork and music called "DropBox". DropBox is a strategy platformer with a space exploration 
+                        theme. The player, an astronaut, must navigate his way from the starting point to the portal at the 
+                        end of the level. The astronaut wears a backpack which he can drop and use as a platform. 
+                        While the astronaut is not wearing his backpack, he can fit into smaller spaces. The game includes 
+                        collectables which enhance the player’s abilities, such as the “recycle” powerup which allows him to summon 
+                        his already dropped backpack from another place in the level for reuse.</p>
+                    <p>For this project, I was the group’s primary programmer. I maintained the GitHub repository, 
+                        created the movement of the astronaut and other game mechanics, implemented the tiling of the levels, 
+                        and guided the team with instructions on how to make successful game art. </p>
+                    <h3 class="portfolio-media-header">Instructions for Gameplay:</h3>
+                    <p style="margin-bottom: 5px;">The game’s objective is to navigate from the starting point to the portal using your backpack and any 
+                        power-ups available. Standard arrow key platforming controls are used. Pressing “x” drops and picks up 
+                        the astronaut’s backpack, and “z” uses the “recycle” power-up.</p>
+                        <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://jessicataetle.github.io/lmc-2700-dropbox/" class="accent-header">Click here to play DropBox</a>
+                            <p class="accent-second-header"><a href="https://github.com/jessicataetle/lmc-2700-dropbox">Click here to view GitHub Repository</a></p>
+                </div>
             </section>
             <section>
                 <div class="section">
