--- a/projects.html
+++ b/projects.html
@@ -59,12 +59,23 @@
                         power-ups available. Standard arrow key platforming controls are used. Pressing “x” drops and picks up 
                         the astronaut’s backpack, and “z” uses the “recycle” power-up.</p>
                         <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://jessicataetle.github.io/lmc-2700-dropbox/" class="accent-header">Click here to play DropBox</a>
-                            <p class="accent-second-header"><a href="https://github.com/jessicataetle/lmc-2700-dropbox">Click here to view GitHub Repository</a></p>
+                        <p class="accent-second-header"><a href="https://github.com/jessicataetle/lmc-2700-dropbox">Click here to view GitHub Repository</a></p>
+                    <p style="margin-top: 5px;"><strong>WARNING: If you have bad internet connection, the game is very glitchy!</strong></p>
                 </div>
             </section>
             <section>
                 <div class="section">
-                    <h2 class="section-header"> 3-D Piet Mondrian Art Gallery</h2>
+                    <h2 class="section-header">Word Jumbler TwitterBot</h2>
+                    <p style="margin-bottom: 5px">Using Node.js, I created a TwitterBot (@WordJumblerBot) that when the program
+                    is running, any tweet directed at @WordJumblerBot will receive a reply to their Tweet with the letters
+                in the word randomly re-organized except for the first and last letter of each word, so that each word is still 
+            readable.</p>
+                    <p style="margin-bottom: 10px; margin-top: 10px"><a href="https://twitter.com/WordJumblerBot" class="accent-header">Click here to view examples on @WordJumblerBot's profile</a>
+                </div>
+            </section>
+            <section>
+                <div class="section">
+                    <h2 class="section-header">3-D Piet Mondrian Art Gallery</h2>
                     <p style="margin-bottom: 5px">For my Introduction to Computational Media class, I created a 3-Dimensional version of <a href="https://society6.com/product/piet-mondrian1622787_poster">this Piet Mondrian painting</a> using A-Frame. I chose to replicate a Piet Mondrian for this assignment because I grew up going to art museums with my mom, who is a fan of Piet Mondrian. I wanted to recreate the experience of going to an outdoor sculpture garden by enhancing the sculptural elements of this painting as well as adding rain and the gloomy backdrop to make the sculpture pop out of the screen.</p>
                     <p style="margin-bottom: 10px; margin-top: 10px"><a href="aframe.html" class="accent-header">Click here to view the A-Frame Scene</a>
                     <p class="accent-second-header"><a href="https://github.com/jessicataetle/lmc-2700-aframe-project">Click here to view GitHub Repository</a></p>
