lmc 2700 movie poster

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,34 @@
         <article>
             <h2 class="page-header">Design Portfolio</h2>
             <section>
+                <div class="section">
+                    <h2 class="section-header">Remix of <em>Maleficent</em> Movie Poster</h2>
+                    <p style="margin-bottom: 5px;">For one of my projects for Introduction to Visual Design, I was required to find a movie poster,
+                        rotate it 90 degrees, and change the mood of the poster using Photoshop. I chose to "remix" the poster
+                        for the movie <em>Maleficent</em>, and My goal for this project was to take the colorless, intense, 
+                        ominous poster for the movie Maleficent and make it resemble more of a traditional fairytale poster. 
+                        In order to do this, I added warm tones to Angelina Jolie and the backdrop of the cottage, and took 
+                        Angelina Jolie out of the center of the poster and followed the Rule of Thirds to still make her the 
+                        focal point, yet keeping the negative space of the original image. After receiving critiques on my 
+                        rough draft from my peers in the class, I decided to increase the warm tones even more to further this 
+                        mood shift as well as making the cottage more of a pivotal element in the piece by shifting the 
+                        placement of the gradient. While Angelina Jolie is still intimidating in the photo, my design 
+                        choices in the remix made the poster feel less maudlin, which is staying true to the original 
+                        message but changing the mood.
+                    </p>
+                    <table style="width: 90%; table-layout: fixed;">
+                        <tr>
+                            <td><h3 class="portfolio-media-header" style="width: 90%;">Original Poster:</h3></td>
+                            <td><h3 class="portfolio-media-header" style="width: 100%;">Remixed Poster:</h3></td>
+                        </tr>
+                        <tr>
+                            <td><img src="./media/Taetle_002_Final_Orig.jpg" class='portfolio-media'/></td>
+                            <td><img src="./media/Taetle_002_Final_Remix.jpg" class='portfolio-media' style="width: 100%;"/></td>
+                        </tr>
+                    </table>
+                </div>
+            </section>
+            <section>
                  <div class="section">
                     <h2 class="section-header">Fair Fight U at Georgia Tech's Instagram Posts</h2>
                     <p>Started by Stacey Abrams, Fair Fight promotes free and fair elections in Georgia and around the country by advocating for election reform at all levels, encourages voter participation in elections, and educate voters about elections and their voting rights. A new development in this organization is Fair Fight U, which is now a club at every major university on campus promoting voting to the student population. I have created a few instagram posts for this organization. All posts are in Georgia Tech's official color scheme, to indicate the information is intended for Georgia Tech students.</p>
@@ -36,6 +64,8 @@
                     <img src="../media/FFpage4.jpg" class='portfolio-media' lass='portfolio-media' style="width: 40%"/>
                     <p>For this post, I wanted the first picture to capture the user's eye and clearly state the purpose of the post because I knew all of the information about requesting an absentee ballot would not fit onto one picture. For the second, third, and fourth pictures in the post I wanted to include screenshots from the website official voting website to clearly walk a person through the process. Furthermore, I added key information for specfically requesting an absentee ballot to the Georgia Tech campus because I knew my audience for this post is located there.</p>
                 </div>
+            </section>
+            <section>
                 <div class="section">
                     <h2 class="section-header">Eugie Award Title Cards</h2>
                     <p>I work in a science fiction lab at Georgia Tech, and part of the work we do is creating media for well known science fiction companies and awards. For DragonCon 2020, because it was virtual, we were tasked with creating a video presenting The Eugie Award, which is presented to an author who wrote the best piece of innovative fiction that year.</p>
