--- a/portfolio.html
+++ b/portfolio.html
@@ -37,13 +37,13 @@
                         choices in the remix made the poster feel less maudlin, which is staying true to the original 
                         message but changing the mood.
                     </p>
-                    <table style="width: 90%; table-layout: fixed;">
+                    <table style="width: 100%; table-layout: fixed;">
                         <tr>
-                            <td><h3 class="portfolio-media-header" style="width: 90%;">Original Poster:</h3></td>
-                            <td><h3 class="portfolio-media-header" style="width: 100%;">Remixed Poster:</h3></td>
+                            <td><h3 class="portfolio-media-header">Original Poster:</h3></td>
+                            <td><h3 class="portfolio-media-header" style="width: 110%; margin-left: 0px;">Remixed Poster:</h3></td>
                         </tr>
                         <tr>
-                            <td><img src="./media/Taetle_002_Final_Orig.jpg" class='portfolio-media'/></td>
+                            <td><img src="./media/Taetle_002_Final_Orig.jpg" class='portfolio-media'  style="width: 80%;"/></td>
                             <td><img src="./media/Taetle_002_Final_Remix.jpg" class='portfolio-media' style="width: 100%;"/></td>
                         </tr>
                     </table>
