make posters similar sizes

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,12 +39,12 @@
                     </p>
                     <table style="width: 100%; table-layout: fixed;">
                         <tr>
-                            <td><h3 class="portfolio-media-header">Original Poster:</h3></td>
-                            <td><h3 class="portfolio-media-header" style="width: 110%; margin-left: 0px;">Remixed Poster:</h3></td>
+                            <td><h3 class="portfolio-media-header" style="padding-right: 0px; width: 50%;">Original Poster:</h3></td>
+                            <td><h3 class="portfolio-media-header" style="width: 110%; padding-left: 0px;">Remixed Poster:</h3></td>
                         </tr>
                         <tr>
-                            <td><img src="./media/Taetle_002_Final_Orig.jpg" class='portfolio-media'  style="width: 80%;"/></td>
-                            <td><img src="./media/Taetle_002_Final_Remix.jpg" class='portfolio-media' style="width: 100%;"/></td>
+                            <td><img src="./media/Taetle_002_Final_Orig.jpg" class='portfolio-media'  style="width: 60%; padding-right: 0px;"/></td>
+                            <td><img src="./media/Taetle_002_Final_Remix.jpg" class='portfolio-media' style="width: 100%; padding-left: 0px;"/></td>
                         </tr>
                     </table>
                 </div>
