--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,26 @@
             <h2 class="page-header">Design Portfolio</h2>
             <section>
                 <div class="section">
+                    <h2 class="section-header">Photography: Leading the User Through Composition</h2>
+                    <p>For one of my projects for Introduction to Visual Design, I was 
+                        required to go out and taking 100 photographs, then pick 5 photos and combine them to create 
+                        a complex message, one that is more powerful than each image when viewed alone. the message 
+                        I tried to convey is the story of the chaos and commotion of living in a city told by the 
+                        abundance of lines. Since I really enjoyed the reading and lectures on the powers of lines, 
+                        I made it my goal when taking to picture for this project to find lines that actual, implied 
+                        or psychic that I found visually compelling. I particularly looked out for diagonal lines that
+                         are implied or actual, for they are the most fun to play with and visually appealing.</p>
+                    <p style="margin-bottom: 5px;">In addition to demonstrating the prevalence of lines in our everyday lives, I wanted to use the powerfulness 
+                         of the lines in the pictures to demonstrate the chaos and confusion I associate with living in the 
+                         city. In order to do this, I chose to juxtapose the photos in complimentary ways and then flip the 
+                         entire photo vertically but keep the symmetrical composition, in order to blur and confuse the 
+                         boundary between the original photos and the upside down ones.
+                    </p>
+                    <img src="./media/Taetle_003_Final_Comp_Combined.jpg" class='portfolio-media'  style="width: 60%; padding-right: 0px;"/>
+                </div>
+            </section>
+            <section>
+                <div class="section">
                     <h2 class="section-header">Remix of <em>Maleficent</em> Movie Poster</h2>
                     <p style="margin-bottom: 5px;">For one of my projects for Introduction to Visual Design, I was required to find a movie poster,
                         rotate it 90 degrees, and change the mood of the poster using Photoshop. I chose to "remix" the poster
