lmc 3402 final project

--- a/lmc-3402.html
+++ b/lmc-3402.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head>
+    <title>Crafting the Atlanta Skyline</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neue">
+    <link rel="stylesheet" href="./css/lmc-3402.css">
+</head>
 <body>
-    This is a blank page where my project will go
+    <img src="./media/Untitled-2 combined-01.jpg" style="height: 100%; width: 95%; margin: 20px;" />
+    <p class="header" style="margin-top: 25px;" >Graphic and Visual Design Final Project:</p>
+    <p class="header">Crafting the Atlanta Skyline</p>
+    <p class="sub-header">By Jessica Taetle</p>
+    <p class="paragraph">By marrying the worlds of crafting and the internet together through these handcrafted items based around this vector rendering of the Atlanta skyline...</p>
+    <p class="paragraph" style="text-align: right;">...One can observe that even in the modern era, there's still space for craft innovation.</p>
 </body>
 </html>
