add pic of display

--- a/lmc-3402.html
+++ b/lmc-3402.html
@@ -12,5 +12,6 @@
     <p class="sub-header">By Jessica Taetle</p>
     <p class="paragraph">By marrying the worlds of crafting and the internet together through these handcrafted items based around this vector rendering of the Atlanta skyline...</p>
     <p class="paragraph" style="text-align: right;">...One can observe that even in the modern era, there's still space for craft innovation.</p>
+    <img src="./media/IMG_9609.jpg" style="height: 100%; width: 95%;"">
 </body>
 </html>
