--- a/lmc-3402.html
+++ b/lmc-3402.html
@@ -11,7 +11,7 @@
     <p class="header">Crafting the Atlanta Skyline</p>
     <p class="sub-header">By Jessica Taetle</p>
     <p class="paragraph">By marrying the worlds of crafting and the internet together through these handcrafted items based around this vector rendering of the Atlanta skyline...</p>
-    <p class="paragraph" style="text-align: right;">...One can observe that even in the modern era, there's still space for craft innovation.</p>
-    <img src="./media/IMG_9609.jpg" style="height: 100%; width: 95%;"">
+    <p class="paragraph" style="text-align: right;">...One can observe that even in the modern era, there's still space for innovation in craft.</p>
+    <img src="./media/IMG_9609.jpg" style="height: 100%; width: 95%;">
 </body>
 </html>
